# gnss_gpu

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cuda-runtime-self-hosted.yml  pages.yml
benchmarks/: RESULTS.md  bench_acquisition.py  bench_all.py  bench_particle_filter.py  bench_pf_device.py  bench_raytrace.py  bench_signal_sim.py  bench_skyplot.py  bench_wls.py
data/: gps_ca_codes.py  gsdc2023_factor_count_writer_regression_manifest.json  gsdc2023_factor_mask_writer_regression_manifest.json  gsdc2023_residual_diagnostics_writer_regression_manifest.json  sample_plateau.gml  sample_satellites.json
docs/: decisions.md  design.md  index.html  paper_draft_2026-04-01.md  plan.md  references.bib  site.css
docs/assets/: results_snapshot.js  results_snapshot.json
examples/: README.md  demo_acquisition.py  demo_full_pipeline.py  demo_interference.py  demo_plateau_urban.py  demo_plateau_urban_results.md  demo_real_data.py  demo_rinex.py  demo_signal_sim.py  demo_urban_canyon_sim.py  demo_visualization.py
experiments/: README.md  _common.py  add_label_prior_feature.py  aggregate_reflection_features.py  aggregate_utd_features.py  analyze_gsdc2023_all_trip_bridge_source_delta.py  analyze_gsdc2023_fgo_proxy_rescue.py  analyze_gsdc2023_kaggle_ab.py  analyze_gsdc2023_multi_bridge_source_delta.py  analyze_gsdc2023_path_residual_components.py  analyze_gsdc2023_raw_wls_policy.py  analyze_gsdc2023_source_ab.py  analyze_gsdc2023_source_blend_residual.py  analyze_gsdc2023_source_oracle.py  analyze_gsdc2023_submission_enu_offset.py  analyze_gsdc2023_target_trip_source_delta.py  analyze_gsdc2023_tdcp_displacement.py  analyze_gsdc2023_trajectory_shape.py  analyze_libgnss_rtk_spans.py  analyze_nlos_mask_vs_hybrid_errors.py  analyze_nlos_spp_candidate_triage_nr2.py  analyze_nr2_phase42_nonref_triggers.py  analyze_nr2_pool_oracle_fail_spans.py  analyze_nr2_ranker_recoverable.py  analyze_nr2_truly_lost.py  analyze_phase43_residual_gap.py  analyze_phase43_span_oracle.py  analyze_phase59_consensus_span_signals.py  analyze_phase61_no_oracle_span_bias.py  analyze_phase62_span_bias_correction_oracle.py  analyze_phase63_motion_boundary_cues.py  analyze_phase64_nearby_anchor_offsets.py  analyze_phase66_plateau_candidate_mask_diff.py  analyze_phase67_osm_road_centerline_feasibility.py  analyze_phase74_nr2_span1_road_variants.py  analyze_phase75_nr2_low_sat_bridge.py  analyze_phase76_nr2_span3_c4_recovery.py  analyze_phase77_nr2_selector_recovery_bucket.py  analyze_phase78_nr2_label_pair_detector.py  analyze_phase79_nr2_top1_replay.py  (+384 more)
experiments/pf_strategy_lab/: __init__.py  cross_validate_families.py  evaluate_strategies.py  interfaces.py  strategies.py  sweep_entry_veto_family.py
experiments/results/: README.md  baseline_ekf.csv  baseline_summary.csv  baseline_wls.csv  d034_loro_results.csv  d034_path1_per_window_predictions.csv  d034_path3_hmm_diag_n3.csv  (+856 more)
internal_docs/: README.md  algorithm_architecture.md  codex_task_phase9c_ins.md  ctrbpf_fgo_ppc_design.md  cursor_task_d.md  cursor_task_imu_tight.md  decisions.md  design.md  experiments.md  gici_open_phase19_breakthrough.md  gpt_pro_advice_request_2026_05_15.md  gpt_pro_advice_request_2026_05_15_evening.md  gpt_pro_advice_response_2026_05_15.md  gsdc2023_kaggle_pivot_status_20260519.md  gsdc2023_post_pr55_status_20260510.md  gsdc2023_submit_readiness_pr_body_20260505.md  gsdc2023_submit_readiness_release_20260505.md  gsdc_dgnss_feasibility.md  interfaces.md  literature_audit_2026-04-01.md  paper_draft_2026-04-01.md  pf_smoother_api.md  plan.md  ppc2024_realtime_target.md  ppc_current_status.md  proper_rbpf_velocity_results.md  rbpf_velocity_gated_results.md  rbpf_velocity_phase2_results.md  research_nlos_multipath.md  rms_prefilter_breakthrough_2026_05_15.md  spp_improvement_options_2026_05_15.md
output/: plateau_vulnerability_map.geojson
src/: dummy.cu
src/particle_filter/: CMakeLists.txt  pf_device.cu  predict.cu  resampling.cu  svgd.cu  weight.cu  weight_3d.cu  weight_3d_bvh.cu
tests/: pf_smoother_forward_helpers.py  test_acquisition.py  test_analyze_gsdc2023_all_trip_bridge_source_delta.py  test_analyze_gsdc2023_fgo_proxy_rescue.py  test_analyze_gsdc2023_kaggle_ab.py  test_analyze_gsdc2023_multi_bridge_source_delta.py  test_analyze_gsdc2023_path_residual_components.py  test_analyze_gsdc2023_raw_wls_policy.py  test_analyze_gsdc2023_source_ab.py  test_analyze_gsdc2023_source_blend_residual.py  test_analyze_gsdc2023_source_oracle.py  test_analyze_gsdc2023_submission_enu_offset.py  test_analyze_gsdc2023_target_trip_source_delta.py  test_analyze_gsdc2023_trajectory_shape.py  test_apply_gsdc2023_bridge_position_offsets.py  test_apply_gsdc2023_position_offsets.py  test_apply_gsdc2023_target_trip_source_patches.py  test_atmosphere.py  test_audit_gici_reference_pool.py  test_audit_gsdc2023_base_readiness.py  test_audit_gsdc2023_basecorr_private_floor_lineage.py  test_audit_gsdc2023_carrier_phase_usability.py  test_audit_gsdc2023_dd_carrier_support.py  test_audit_gsdc2023_factor_mask_parity.py  test_audit_gsdc2023_local_submission_provenance.py  test_audit_gsdc2023_matlab_equivalence_gate.py  test_audit_gsdc2023_matlab_submission_score_equivalence.py  test_audit_gsdc2023_phone_data_artifact_compatibility.py  test_audit_gsdc2023_phone_data_sidecar_writer_regression.py  test_audit_gsdc2023_pr_proxy_risk.py  test_audit_gsdc2023_private_floor_reconstruction.py  test_audit_gsdc2023_private_floor_recovery_dependencies.py  test_audit_gsdc2023_residual_diagnostics_pd_parity.py  test_audit_gsdc2023_residual_diagnostics_sidecar.py  test_audit_gsdc2023_residual_diagnostics_writer_regression.py  test_audit_gsdc2023_residual_mask_drop.py  test_audit_gsdc2023_residual_side_only.py  test_audit_gsdc2023_residual_value_parity.py  test_audit_gsdc2023_vd_factor_residuals.py  test_build_gpu_stress_lab_site.py  (+214 more)
(+270 files in other folders)
